overlays/staging/shared/ingress.yaml
# overlays/staging/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obywatel-plus-ingress
  namespace: obywatel-staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api-obywatel.local
        - localhost-0.tail400384.ts.net
      secretName: tailscale-tls-secret

  rules:
    - host: api-obywatel.local
      http:
        paths: &paths
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80

    - host: localhost-0.tail400384.ts.net
      http:
        paths: *paths
